--- a/pen_tool/drawnMap.html
+++ b/pen_tool/drawnMap.html
@@ -39,7 +39,16 @@
 }
 
 
-
+.ui-resizable-resizing:after
+{
+    content: '';
+    position: absolute; 
+    z-index: 999; 
+    left: 0px; 
+    top: 0px; 
+    right: 0px;
+    bottom: 0px;
+}
 
 
 		.mapbg{
