added color picker, modal for color map change, new cursor

--- a/pen_tool/drawnMap.html
+++ b/pen_tool/drawnMap.html
@@ -68,6 +68,7 @@
     z-index: 5; /* Stay on top */
     top: 0;
     box-sizing: content-box;
+    overflow-y: hidden;
     left: 0;
 /*     outline: 3px dashed #ccc;*/
     background-color:#424040; 
