--- a/pen_tool/index.html
+++ b/pen_tool/index.html
@@ -179,9 +179,9 @@ nav{
    
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="left hide-on-med-and-down tabs tabs-transparent">
-        <li class="tab"><a href="">Step 1.draw your route on the map</a></li>
-        <li class="tab"><a target="_self"  href="drawnMap.html">Step 2.fill points with content</a></li>
-        <li class="tab"><a   href="">Result</a></li>
+        <li class="tab"><a href="index.html" target="_self">Step 1.draw your route on the map</a></li>
+        <li class="tab"><a href="drawnMap.html" target="_self">Step 2.fill points with content</a></li>
+        <li class="tab"><a href="ready_page/ready_page.html" target="_self">Result</a></li>
 
 
 
@@ -540,7 +540,16 @@ $("#moveBottom").bind("click", function(){
 
 
  $(document).ready(function(){     //Materialize.css plugins
-    $('ul.tabs').tabs();
+    // $('ul.tabs').tabs();
+
+
+    var checkTabs = function(){
+        $('ul.tabs').tabs();
+        var active = $('ul.tabs .active').attr('href');
+        $('.tabs-content ' + active).show();
+        console.log(active);
+    }
+
     $('.modal').modal();
  
       $('.button-collapse').sideNav({
@@ -566,7 +575,7 @@ $("#moveBottom").bind("click", function(){
 
 </script>
 
-<script src="js/materialize.min.js"></script>
+<script src="js/materialize.js"></script>
 <!-- <script src="js/colorpicker/spectrum.js"></script> -->
 
 	
